--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,12 +6,11 @@ spring:
   application:
     name: tecnoguard
   datasource:
-    url: jdbc:h2:mem:tecnoguard;DB_CLOSE_DELAY=1;DB_CLOSE_ON_EXIT=FALSE
-    driverClassName: org.h2.Driver
-    username: sa
-    password:
+    url: jdbc:postgresql://localhost:5432/tecnoguard
+    username: postgres
+    password: postgres
   jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
       ddl-auto: update
   h2:
