--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -15,3 +15,8 @@ spring:
     user:
       name: admin
       password: 1234
+
+api:
+  security:
+    token:
+      secret: ${JWT_SECRET:my_secret_key}
