--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -6,8 +6,14 @@ spring:
     password:
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
-    hibernate.ddl-auto: create-drop
-    show-sql: true
+    hibernate:
+      ddl-auto: create-drop
+    properties:
+      hibernate:
+        format_sql: true
+        show-sql: false
+  main:
+    allow-bean-definition-overriding: true
   h2:
     console:
       enabled: true
