--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -7,7 +7,7 @@ spring:
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
     properties:
       hibernate:
         format_sql: true
@@ -21,7 +21,12 @@ spring:
     user:
       name: admin
       password: 1234
-
+  flyway:
+    enabled: true
+    url: jdbc:h2:mem:tecnoguard_test;DB_CLOSE_DELAY=1;DB_CLOSE_ON_EXIT=FALSE
+    user: sa
+    password:
+    locations: classpath:db/migration/h2
 api:
   security:
     token:
