docs: implementação do Swagger (documentação)

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,3 +24,6 @@ spring:
   flyway:
     enabled: true
     locations: classpath:db/migration/postgres
+  jackson:
+    serialization:
+      write-dates-as-timestamps: false
