--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -27,6 +27,9 @@ spring:
     user: sa
     password:
     locations: classpath:db/migration/h2
+  jackson:
+    serialization:
+      write-dates-as-timestamps: false
 api:
   security:
     token:
