--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
     name: tecnoguard
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/${DB_NAME}
+    url: jdbc:postgresql://postgres:5432/${DB_NAME}
     username: ${DB_USER}
     password: ${DB_PASSWORD}
   jpa:
