build: acertos para Deploy em Docker

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 HELP.md
 target/
-.mvn/wrapper/maven-wrapper.jar
+!.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
 
@@ -57,5 +57,13 @@ build/
 hs_err_pid*
 replay_pid*
 
+# OS
+.DS_Store
+Thumbs.db
+
+# Docker
+*.tar
+
 # Enviroment variables
 .env
+.env.local
