--- a/.env_default
+++ b/.env_default
@@ -1,5 +1,17 @@
 # .env
-JWT_SECRET=
+# Database
+DB_HOST=
+DB_PORT=
 DB_NAME=
 DB_USER=
 DB_PASSWORD=
+
+# JWT
+JWT_SECRET=
+JWT_EXPIRATION=
+
+# Spring Profile
+SPRING_PROFILES_ACTIVE=
+
+# App
+SERVER_PORT=
