feat: preparação dos testes

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -18,3 +18,7 @@ spring:
   jackson:
     serialization:
       write-dates-as-timestamps: false
+api:
+  security:
+    token:
+      secret: ${JWT_SECRET}
