--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -2,18 +2,14 @@ server:
   port: ${DEV_PORT}
 spring:
   datasource:
+    driver-class-name: org.h2.Driver
     url: ${DB_DEV_URL}
-    driverClassName: org.h2.Driver
     username: sa
     password:
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
       ddl-auto: none
-    properties:
-      hibernate:
-        format_sql: true
-        show-sql: false
   main:
     allow-bean-definition-overriding: true
   h2:
@@ -25,9 +21,6 @@ spring:
       password: 1234
   flyway:
     enabled: true
-    url: jdbc:h2:mem:tecnoguard_test;DB_CLOSE_DELAY=1;DB_CLOSE_ON_EXIT=FALSE
-    user: sa
-    password:
     locations: classpath:db/migration/h2
   jackson:
     serialization:
@@ -35,4 +28,4 @@ spring:
 api:
   security:
     token:
-      secret: ${JWT_SECRET}
+      secret: dev-secret
